fix block banner spacing

--- a/src/views/components/banner/BlockBanner.module.css
+++ b/src/views/components/banner/BlockBanner.module.css
@@ -48,7 +48,7 @@
 }
 
 .BlockBannerNav > a {
-  margin: 0 8px;
+  margin: 0 12px;
   color: #000;
   font-size: 12px;
   text-decoration: none;
